k8s/infrastructure/network/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-subdomains
      hostname: "*.smadja.dev"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-smadja
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-apex
      hostname: smadja.dev
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-smadja
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-lechaplais-management
      hostname: gestion.lechaplais.com
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-lechaplais-management
      allowedRoutes:
        namespaces:
          from: All
